[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/SelectGame.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PlaceHolder.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Old-Standard-TT/OldStandard-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/NewGameButton.gd" type="Script" id=4]
[ext_resource path="res://Scripts/EasyButton.gd" type="Script" id=5]
[ext_resource path="res://Scripts/MediumButton.gd" type="Script" id=6]
[ext_resource path="res://Scripts/HardButton.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=11]
size = 200
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Fonts/Old-Standard-TT/OldStandard-Regular.ttf"

[sub_resource type="DynamicFont" id=13]
size = 150
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Fonts/Old-Standard-TT/OldStandard-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 150
font_data = SubResource( 9 )

[node name="SaveFiles" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="MenuLandscape" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PlaceHolder" type="Button" parent="MenuLandscape"]
margin_left = 279.0
margin_top = 203.0
margin_right = 821.0
margin_bottom = 561.0
text = "PlaceHolder"
script = ExtResource( 2 )

[node name="MenuPortrait" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="DifficultyContainer" type="VBoxContainer" parent="MenuPortrait"]
visible = false
margin_left = 211.0
margin_top = 364.0
margin_right = 908.0
margin_bottom = 1182.0

[node name="Easy" type="Button" parent="MenuPortrait/DifficultyContainer"]
margin_right = 697.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 11 )
text = "Easy"
script = ExtResource( 5 )

[node name="Medium" type="Button" parent="MenuPortrait/DifficultyContainer"]
margin_top = 260.0
margin_right = 697.0
margin_bottom = 516.0
custom_fonts/font = SubResource( 11 )
text = "Medium"
script = ExtResource( 6 )

[node name="Hard" type="Button" parent="MenuPortrait/DifficultyContainer"]
margin_top = 520.0
margin_right = 697.0
margin_bottom = 776.0
custom_fonts/font = SubResource( 11 )
text = "Hard"
script = ExtResource( 7 )

[node name="VScrollBar" type="VScrollBar" parent="MenuPortrait"]
margin_right = 12.0
margin_bottom = 12.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPortrait/VScrollBar"]
margin_left = 99.0
margin_top = 211.0
margin_right = 1016.0
margin_bottom = 1709.0

[node name="PlaceHolder" type="Button" parent="MenuPortrait/VScrollBar/VBoxContainer"]
margin_right = 917.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 13 )
text = "Custom Game"
script = ExtResource( 2 )

[node name="NewGameButton" type="Button" parent="MenuPortrait/VScrollBar/VBoxContainer"]
margin_top = 198.0
margin_right = 917.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 10 )
text = "New Game"
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPortrait/VScrollBar/VBoxContainer"]
margin_top = 396.0
margin_right = 917.0
margin_bottom = 396.0

[connection signal="button_up" from="MenuLandscape/PlaceHolder" to="MenuLandscape/PlaceHolder" method="_on_PlaceHolder_button_up"]
[connection signal="button_up" from="MenuPortrait/DifficultyContainer/Easy" to="MenuPortrait/DifficultyContainer/Easy" method="_on_Easy_button_up"]
[connection signal="button_up" from="MenuPortrait/DifficultyContainer/Medium" to="MenuPortrait/DifficultyContainer/Medium" method="_on_Medium_button_up"]
[connection signal="button_up" from="MenuPortrait/DifficultyContainer/Hard" to="MenuPortrait/DifficultyContainer/Hard" method="_on_Hard_button_up"]
[connection signal="button_up" from="MenuPortrait/VScrollBar/VBoxContainer/PlaceHolder" to="MenuPortrait/VScrollBar/VBoxContainer/PlaceHolder" method="_on_PlaceHolder_button_up"]
